tests/fail/semantic/product_type_mismatch_prefix_op_field.cyt
atom Input(name: string)

enzyme InvalidPrefixOp[a: Input] -> Input(name: -a.name)

// args: --no-colour

// expected stderr:
// error: cannot apply unary operator `-` to type `string`
//   ┌─ ../tests/fail/semantic/product_type_mismatch_prefix_op_field.cyt:3:49
//   │
// 3 │ enzyme InvalidPrefixOp[a: Input] -> Input(name: -a.name)
//   │                                                 ^------ this expression has type `string`
//   │                                                 │ 
//   │                                                 this unary operator is incompatible with type `string`
//   │
//   = the unary operator `-` is compatible with:
//     - type `int`